--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,7 @@
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
+        "mercadopago": "^1.5.9",
         "morgan": "^1.10.0",
         "multer": "^1.4.3",
         "nodemon": "2.0.7",
