Probando detalles de home como solicitó el cliente

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "El Trébol App",
+  "name": "El Trébol - App compras online",
   "icons": [
     {
       "src": "favicon.ico",
