--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.3",
-    "@mui/material": "^5.1.1",
+    "@mui/icons-material": "^5.2.1",
+    "@mui/material": "^5.2.3",
     "@mui/styled-engine-sc": "^5.1.0",
     "@mui/styles": "^5.2.0",
     "@testing-library/jest-dom": "^5.11.4",
