--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,8 @@
         "multer": "^1.4.3",
         "nodemon": "2.0.7",
         "pg": "^8.7.1",
-        "sequelize": "^6.6.5"
+        "sequelize": "^6.6.5",
+        "web-push": "^3.4.5"
     },
     "devDependencies": {
         "nodemon": "^2.0.12"
